# comfy-runner

./: .gitignore  AGENTS.md  ComfyUI_00262__analysis.json  README.md  analyze_workflow.py  batch_runner_shots.py  batch_runner_v2.py  comfy_runner.py  generate_contact_sheet.py  pyproject.toml  requirements-dev.txt  requirements.txt  scena1_analysis.json  vlad-omv_analysis.json
.github/workflows/: ci.yml
docs/: AGENTS.md
legacy/: batch_config.yaml  batch_runner.py
remote/wan2_14B_flf2v/: workflow.json
remote/wan2_14B_flf2v/configs/: category1_seed_mining.yaml  category3_parameter_search.yaml
shots/: README.md
shots/example_shot/: prompt.txt
src/comfy_api/: __init__.py  ali_smoke.py  ali_video_test.py  analyzer.py  batch.py  category_generator.py  contact_sheet.py  runner.py  shots_batch.py  video_analyzer.py
workflows/: SAMPLER_GROUPS.md
workflows/wan2_14B_flf2v/: workflow.json  workflow_batch_config.yaml
workflows/wan2_14B_flf2v/configs/: EXPERIMENT_CATEGORIES.md  RES4LYF_ANALYSIS.md  SAMPLER_GUIDE.md  baseline.yaml  category1_seed_mining.yaml  category1_seed_mining_template.yaml  category2_sampler_surfing.yaml  category2_sampler_surfing_template.yaml  category3_parameter_search.yaml  category3_parameter_search_grid.yaml  category3_parameter_search_sobol.yaml  example_category2_quick_test.yaml  samplers_template.yaml  samplers_type1_base.yaml  samplers_type2_lightlora.yaml  samplers_type3_snr_notes.md  shots.yaml  smoke.yaml
workflows/wan2_5B_ti2v/: workflow.json
