[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy-runner"
version = "0.1.0"
description = "ComfyUI API Automation Suite: batch parameter exploration and tools"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "scipy>=1.10.0",
  "numpy>=1.24.0",
]

[project.scripts]
comfy-run = "comfy_api.runner:main"
comfy-analyze = "comfy_api.analyzer:main"
comfy-batch = "comfy_api.batch:main"
comfy-shots = "comfy_api.shots_batch:main"
comfy-contact-sheet = "comfy_api.contact_sheet:main"

# New preferred short CLI names
cr-run = "comfy_api.runner:main"
cr-analyze = "comfy_api.analyzer:main"
cr-batch = "comfy_api.batch:main"
cr-shots = "comfy_api.shots_batch:main"
cr-contact-sheet = "comfy_api.contact_sheet:main"
cr-video-analyze = "comfy_api.video_analyzer:main"
cr-ali-test = "comfy_api.ali_smoke:main"
cr-ali-video-test = "comfy_api.ali_video_test:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
